--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="ruturajnikam7/first.css">
+    <link rel="stylesheet" href="/ruturajnikam7/first.css">
     <link  href="/images/icon.png" rel="icon"/>
 </head>
 
