--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <h1>Ruturaj Nikam</h1>
-            <img id="Me" src="/images/raj.png.jpg" alt="Me">
+            <img id="Me" src="/blob/master/images/raj.png.jpg" alt="Me">
         </header>
 
         <h2>About Me</h2>
@@ -28,22 +28,22 @@
             quod modi corporis corrupti. Sit.</p>
         <h2>Skills</h2><br>
         <!-- <a  href="https://www.w3schools.com/html/" target="_blank"> -->
-        <img id="ht" src="/images/html.png" alt="Skills">
+        <img id="ht" src="/blob/master/images/html.png" alt="Skills">
 
         <!-- <a  href="https://www.w3schools.com/css/" target="_blank"> -->
-        <img id="css" src="/images/css.png" alt="Skills">
+        <img id="css" src="/blob/master/images/css.png" alt="Skills">
 
 
         <!-- <a  href="https://www.w3schools.com/js/default.asp" target="_blank"> -->
-        <img id="js" src="/images/js.png" alt="Skills">
+        <img id="js" src="/blob/master/images/js.png" alt="Skills">
 
 
         <!-- <a  href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp" target="_blank"> -->
-        <img id="bt" src="/images/bootstrap.png" alt="Skills">
+        <img id="bt" src="/blob/master/images/bootstrap.png" alt="Skills">
 
 
         <!-- <a href="https://www.w3schools.com/react/default.asp" target="_blank"> -->
-        <img id="rt" src="/images/react.png" alt="Skills">
+        <img id="rt" src="/blob/master/images/react.png" alt="Skills">
 
 
         <h2 id="mp">Map</h2>
@@ -52,15 +52,15 @@
         <h2 id="copy">&copy;Build With &hearts; By Ruturaj Nikam</h2>
 
         <a href="https://www.instagram.com/" target="_blank">
-            <img id="in" src="/images/insta.png" alt="instagram">
+            <img id="in" src="/blob/master/images/insta.png" alt="instagram">
         </a>
 
         <a href="https://www.linkedin.com/login" target="_blank">
-            <img id="ld" src="/images/linkdin.png" alt="linkedin">
+            <img id="ld" src="/blob/master/images/linkdin.png" alt="linkedin">
         </a>
 
         <a href="https://github.com/RuturajNikam7" target="_blank">
-            <img id="gt" src="/images/git.png" alt="github">
+            <img id="gt" src="/blob/master/images/git.png" alt="github">
         </a>
 
     </div>
