--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/portfolio/first.css">
-    <link  href="/blob/master/images/raj.png.jpg" rel="icon"/>
+    <link  href="/blob/master/images/raj.jpg" rel="icon"/>
 </head>
 
 <body>
